<resources>
    <string name="app_name">Washing</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login Or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Register_link">Regeter</string>
    <string name="Cancel">Cancel</string>
    <string name="regester_name">name</string>
    <string name="button_register">Regester</string>
    <string name="order_text">New Order</string>
    <string name="appointment_time_text">Appointment Time</string>
    <string name="earliest_text">Earliest</string>
    <string name="appointment_time">13:00</string>
    <string name="door_service">Door Service</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="near_end_time">After 30 minutes</string>
    <string name="address">*  Laundry No.2</string>
</resources>
